@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.7 2004/03/11 22:32:20 dun Exp $
+## $Id: Makefile.am,v 1.8 2004/03/12 20:16:36 dun Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
@@ -15,7 +15,6 @@ sbin_PROGRAMS = \
 	munged
 
 munged_CFLAGS = \
-	-D_REENTRANT \
 	-DWITH_PTHREADS
 
 munged_LDADD = \
